Tests de controller de titulares